[package]
name = "canvas"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.56"

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
futures = "0.3.28"
js-sys = "0.3.64"
queues = "1.1.0"
wasm-bindgen = "0.2.87"
wasm-timer = "0.2.5"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
gloo = "0.10.0"
sycamore = {version = "0.8.2", features = ["wasm-bindgen", "web", "web-sys", "sycamore-web"]}
derive-new = "0.5.9"

[dependencies.wasm-bindgen-futures]
version = "0.4.37"
features = ['futures-core']


[dependencies.web-sys]
version = "0.3.4"
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "MouseEvent", "HtmlDivElement", "HtmlLabelElement", "HtmlImageElement", "HtmlButtonElement", "HtmlInputElement", "HtmlSpanElement", "ImageData", "Node", "HtmlSelectElement"]
