[package]
name = "canvas"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"
rust-version = "1.56"

[profile.release]
debug = true

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.64"
queues = "1.1.0"
wasm-bindgen = "0.2.87"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
gloo = "0.10.0"
sycamore = {version = "0.9.0-beta.2", features = ["wasm-bindgen", "web", "web-sys", "sycamore-web"]}
shrinkwraprs = "0.3.0"
tracing-wasm = "0.2.1"


[dependencies.web-sys]
version = "0.3.4"
features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window", "MouseEvent", "HtmlDivElement", "HtmlLabelElement", "HtmlImageElement", "HtmlButtonElement", "HtmlInputElement", "HtmlSpanElement", "ImageData", "Node", "HtmlSelectElement"]
